cluster/beehive-dev/ingress/beehive_front_end_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beehive-frontend-ingress
  namespace: beehive-dev
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Content-Security-Policy "default-src 'self'; img-src 'self' data: cdn.login.no login.no; style-src 'self' fonts.googleapis.com; style-src-attr 'self' 'unsafe-inline'; style-src-elem 'self' fonts.googleapis.com; font-src 'self' fonts.gstatic.com; script-src 'self' 'unsafe-eval'; connect-src 'self' api.login.no testapi.login.no events.mapbox.com https://*.mazemap.com https://api.mapbox.com; script-src-elem 'self' https://api.mapbox.com; worker-src 'self' blob:; frame-src 'self' us [...]
spec:
  ingressClassName: nginx-ntnu
  tls:
    - hosts:
        - test.login.no
  rules:
    - host: test.login.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: beehive-frontend-svc
                port:
                  number: 80
    - host: www.test.login.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: beehive-frontend-svc
                port:
                  number: 80
